--- a/templates/DeleteSO.html
+++ b/templates/DeleteSO.html
@@ -31,23 +31,22 @@
 
         }
 
-        button{
+        .button{
             margin: 5px;
             outline: none;
             border: thin solid black;
             text-decoration: none;
             background: none;
             padding: 10px;
-            padding-bottom: 9px;
             margin-left: 5px;
             margin-right: 10px;
             color: black;
             font-size:180%;
-            border-radius: 1px;
-            font-family: sohne, "Helvetica Neue", Helvetica, Arial, sans-serif;  
+            font-family: sohne, "Helvetica Neue", Helvetica, Arial, sans-serif;
+           
         }
 
-        button:hover {
+        .button:hover {
     
             background: black;
             outline: none;
