--- a/templates/formsShipment.html
+++ b/templates/formsShipment.html
@@ -52,10 +52,9 @@
             text-decoration: none;
             background: none;
             padding: 10px;
+
             margin-left: 5px;
             margin-right: 10px;
-            padding-left: 7px;
-            padding-right: 7px;
             color: black;
             font-size:80%;
             font-family: sohne, "Helvetica Neue", Helvetica, Arial, sans-serif;
@@ -71,14 +70,15 @@
            
         }
         
+        
         .link {
             outline: none;
             border: thin solid black;
             text-decoration: none;
             padding: 10px;
             margin-right: 20px;
-            padding-left: 14px;
-            padding-right: 14px;
+            padding-left: 16px;
+            padding-right: 16px;
             margin-left: 5px;
             color: black;
             font-size:80%;
@@ -105,13 +105,22 @@
         }
         
         #ETD {
+            padding:10px;
+            margin:5px;  
+            border: thin solid black;
+            border-radius: 1px;
             width: 145px;
-            font-size:80%;
             height: 16px;
+            font-size:80%;
             font-family: sohne, "Helvetica Neue", Helvetica, Arial, sans-serif;
         }
         
         #ETA{
+            
+            padding:10px;
+            margin:5px;  
+            border: thin solid black;
+            border-radius: 1px;
             width: 145px;
             height: 16px;
             font-size:80%;
@@ -140,6 +149,7 @@
             {{ form.number }}
             {{ form.bknumber }}
             <button type="submit" class="button">Submit</button>
+
         </div>
         
         <div class="line1">
