--- a/static/Style.css
+++ b/static/Style.css
@@ -15,8 +15,6 @@
   font-size:405%;  
 }
 
-
-
 .row1 {
 
     outline: none;
@@ -42,7 +40,8 @@
 
 .row2 {
     background-color: #1f39bf9f; 
-}    
+}
+
 
 .row3 {
     background-color: gainsboro; 
@@ -130,7 +129,7 @@ body {
     margin: 15px auto;
     position: relative;
     text-align: center;
-    height: 570px;
+    height: 550px;
     overflow-y: auto;
     overflow-x: auto;
     white-space: nowrap;
@@ -192,5 +191,69 @@ body {
     margin-left: auto;
 }
 
+.one {
+    padding:10px;
+    margin:5px;  
+    margin-left:40px;
+    border: thin solid black;
+    border-radius: 1px;
+    position: absolute;
+    left:1000px;
+    top: 70px;
+}
+.box {
+    width: 1400px;
+    margin: 15px auto;
+    position: relative;
+    text-align: center;
+    height: 520px;
+    overflow-y: auto;
+    overflow-x: auto;
+    white-space: nowrap;
+}
 
+.button{
+    margin: 5px;
+    outline: none;
+    border: thin solid black;
+    text-decoration: none;
+    background: none;
+    padding: 10px;
+    position: absolute;
+    left: 1210px;
+    top: 70px;
+    color: black;
+    font-size:80%;
+    font-family: sohne, "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+
+.button:hover {
+    background: black;
+    outline: none;
+    color: white;
+    cursor: pointer;
+}
+
+.variants {
+    width: 167px;
+    max-height: 55px;
+    background-color: white;
+    position: absolute;
+    left: 1040px;
+    top: 112px;
+    z-index: 1;
+    overflow-y: auto;
+    overflow-x: auto;
+}
+li {
+    list-style: none;
+    padding: 3px;
+    font-family: sohne, "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-size:85%;
+}
+
+li:hover {
+    cursor: pointer;
+    background: gold;
+}
 
