--- a/templates/MonthlyReport.html
+++ b/templates/MonthlyReport.html
@@ -153,32 +153,34 @@
     <a href="{% url  'MonthlyPart' fecha %}" class ="link1">{{fecha}}</a>
     {% endfor %}
     <table class="table" align="center" >
-        <tr>
-            <td class=row0> {{ 'Number' }} </td>
-            <td class=row0> {{ 'BK' }} </td>
-            <td class=row0> {{ 'SO date' }} </td>
-            <td class=row0> {{ 'PO date' }} </td>
-            <td class=row0> {{ 'Supplier' }} </td>
-            <td class=row0> {{ 'Client' }} </td>
-            <td class=row0> {{ 'Or. city' }} </td>
-    
-            <td class=row0> {{ 'Or. country' }} </td>
-            <td class=row0> {{ 'Dest. city' }} </td>
-            <td class=row0> {{ 'Dest. country' }} </td>
-            
-
-            <td class=row0> {{ 'Material' }} </td>
         
-            <td class=row0> {{ 'Cntr' }} </td>
-            <td class=row0> {{ 'Tons' }} </td>
-            <td class=row0> {{ 'Min payload' }} </td>
+        {% if len != 0 %}
+        <tr>
+            <td class=row0> Number </td>
+            <td class=row0> BK </td>
+            <td class=row0> SO date </td>
+            <td class=row0> PO date </td>
+            <td class=row0> Supplier </td>
+            <td class=row0> Client </td>
+            <td class=row0> Or. city </td>
+    
+            <td class=row0> Or. country </td>
+            <td class=row0> Dest. city </td>
+            <td class=row0> Dest. country </td>
+            <td class=row0> Material </td>
+        
+            <td class=row0> Cntr </td>
+            <td class=row0> Tons </td>
+            <td class=row0> Min payload </td>
             
-            <td class=row0> {{ 'ETD' }} </td>
-            <td class=row0> {{ 'ETA' }} </td>
-            <td class=row0> {{ 'M $' }} </td>
-            <td class=row0> {{ 'M €' }} </td>
+            <td class=row0> Forwarder </td>
+            <td class=row0> Carrier </td>            
+            <td class=row0> ETD </td>
+            <td class=row0> ETA </td>
+            <td class=row0> M $ </td>
+            <td class=row0> M € </td>
         </tr>
-
+        {% endif %}
         {% for item in all %}
 
         <tr>
@@ -201,6 +203,9 @@
             <td class=row2> {{ item.Tons }} </td>
             <td class=row2> {{ item.min }} </td>
             
+            <td class=row2> {{ item.forwarder }} </td>
+            <td class=row2> {{ item.line }} </td>           
+            
             <td class=row2> {{ item.ETD }} </td>
             <td class=row2> {{ item.ETA }} </td>
             
@@ -222,9 +227,91 @@
             
             <td class=row6><a href="{% url  'MonthlyUpdate' item.id %}" class =link>U</a></td>
             <td class=row6><a href="{% url  'CostMonthlyView' item.id%}" class =link>N</a></td>
-            {% if request.user.username == 'admin' %}
+            {% if request.user.username == 'managerlatam' or request.user.username == 'managereurope' or request.user.username == 'managerrussia' %}
             <td class=row6><a href="{% url  'FinCostMonthlyView' item.id%}" class =link>F</a></td>
+            {% endif %}
+        </tr>
+        {% endfor %}
+        {% if len1 != 0 %}
+        <tr>
+            <td class=row0> Number </td>
+            <td class=row0> BK </td>
+            <td class=row0> SO date </td>
+            <td class=row0> PO date </td>
+            <td class=row0> Supplier </td>
+            <td class=row0> Client </td>
+            <td class=row0> Or. city </td>
+    
+            <td class=row0> Or. country </td>
+            <td class=row0> Dest. city </td>
+            <td class=row0> Dest. country </td>
+            <td class=row0> Material </td>
+        
+            <td class=row0> Cntr </td>
+            <td class=row0> Tons inv. </td>
+            <td class=row0> Tons act. </td>
+            <td class=row0> Transaction </td>
+            <td class=row0> Min payload </td>
+            
+            <td class=row0> Forwarder </td>
+            <td class=row0> Carrier </td>            
+            <td class=row0> ETD </td>
+            <td class=row0> ETA </td>
+            <td class=row0> M $ </td>
+            <td class=row0> M € </td>
+        </tr>
+        {% endif %}
 
+        {% for item in all1 %}
+
+        <tr>
+            <td class=row2> {{ item.number }} </td>
+            <td class=row2> {{ item.bknumber }} </td>
+            <td class=row2> {{ item.sodate }} </td>
+            <td class=row2> {{ item.podate }} </td>
+            <td class=row2> {{ item.Supplier }} </td>
+            <td class=row2> {{ item.client }} </td>
+            <td class=row2> {{ item.origincity }} </td>
+    
+            <td class=row2> {{ item.origincountry }} </td>
+            <td class=row2> {{ item.destinationcity }} </td>
+            <td class=row2> {{ item.destinationcountry }} </td>
+            
+
+            <td class=row2> {{ item.material }} </td>
+            
+            <td class=row2> {{ item.cntr }} </td>
+            <td class=row2> {{ item.Tons }} </td>
+            <td class=row2> {{ item.Tonsact }} </td>
+            <td class=row2> {{ item.transaction }} </td>
+
+            <td class=row2> {{ item.min }} </td>
+            
+            <td class=row2> {{ item.forwarder }} </td>
+            <td class=row2> {{ item.line }} </td>           
+            
+            <td class=row2> {{ item.ETD }} </td>
+            <td class=row2> {{ item.ETA }} </td>
+            
+            {% if item.margin <= 0 %}
+            <td class=row5> {{ item.margin }} </td>
+            {% endif %}
+    
+            {% if item.margin > 0 %}
+            <td class=row4> {{ item.margin }} </td>
+            {% endif %}
+            
+            {% if item.numero <= 0 %}
+            <td class=row5> {{ item.marginEUR }} </td>
+            {% endif %}
+    
+            {% if item.numero > 0 %}
+            <td class=row4> {{ item.marginEUR }} </td>
+            {% endif %}
+            
+            <td class=row6><a href="{% url  'MonthlyUpdate' item.id %}" class =link>U</a></td>
+            <td class=row6><a href="{% url  'CostMonthlyView' item.id%}" class =link>N</a></td>
+            {% if request.user.username == 'managerlatam' or request.user.username == 'managereurope' or request.user.username == 'managerrussia' %}            <td class=row6><a href="{% url  'FinCostMonthlyView' item.id%}" class =link>F</a></td>
             {% endif %}
         </tr>
         {% endfor %}
