--- a/templates/OPS.html
+++ b/templates/OPS.html
@@ -9,12 +9,25 @@
         .one {
             padding:10px;
             margin:5px;  
-            margin-left:40px;
+            margin-left: 40px;
             border: thin solid black;
             border-radius: 1px;
             position: absolute;
             left:1000px;
             top: 70px;
+        }
+        
+        h1 {
+            position: absolute;
+            left:200px;
+            top: 65px;
+            font-family: sohne, "Helvetica Neue", Helvetica, Arial, sans-serif;
+            font-size:180%;
+            font-weight: 200%;
+            color: gold;
+            outline: none;
+            text-decoration: none;
+            position: absolute;
         }
         
         .button{
@@ -31,7 +44,16 @@
             font-size:80%;
             font-family: sohne, "Helvetica Neue", Helvetica, Arial, sans-serif;
         }
-
+        .dropdown-content {
+            display: none;
+            position: absolute;
+            text-align: center;
+            left: -97px;
+            top: -140px;
+            border: thin solid black;
+            width: 94px;
+            z-index: 1;
+        }
         .button:hover {
             background: black;
             outline: none;
@@ -61,14 +83,22 @@
             cursor: pointer;
             background: gold;
         }
+        .row2t {
+            background-color: #1f39bf9f;
+            border: 2px solid black;
+        }
+        .row0 {
+            background-color: #07f5f5f4;
+            border: 2px solid black;
+        }      
+
     </style>
 </head>
 <body>
-
+{{ request.user.username }}
 <a href = "{% url 'OPS'  %}" class=h2>VIPA</a>
-
 <div class='particular'>
-    {% for i in c %}
+    {% for i in countries %}
     <a href = "{% url 'Particular' i %}" class=link2>{{ i }}</a>
     {% endfor %}
 </div>  
@@ -79,8 +109,11 @@
     <button type="submit" class='button'>Filter</button>
     <div class ="variants" id ="variants"></div>
 </form>
-    
+{% if request.user.username == 'managerlatam' or request.user.username == 'managereurope' %}
+<h1>Loaded this week: {{result}} cntrs</h1>
+{% endif %}
 <div class="box" >
+    
 
     <table class="table" align="center" >
         {% if len2 != 0 %}
@@ -127,14 +160,13 @@
             <td class=head> ETA </td>
             <td class=head> M USD</td>
             <td class=head> M EUR</td>
-            <td class=head>SI</td>
+            <td class=head>SI/CST</td>
             <td class=head>MGC</td>
-            <td class=head>CSTMS</td>
         </tr>
         {% endif %}
         {% for Shipment in Shipments %}
-        {% if Shipment.BK == False %}
-        
+        {% if Shipment.BK == False and Shipment.Truck == False %}
+        <tr>
             <td class=row2> {{ Shipment.number }} </td>
             <td class=row2> {{ Shipment.carrier }} </td>
             <td class=row2> {{ Shipment.bknumber }} </td>
@@ -178,17 +210,17 @@
             <td class=row5> {{ ' ' }} </td>
             {% endif %}
     
-            {% if Shipment.Customs == True %}
+            {% if Shipment.customs == True %}
             <td class=row4> {{ ' ' }} </td>
             {% endif %}
             
-            {% if Shipment.Customs == False %}
+            {% if Shipment.customs == False %}
             <td class=row5> {{ ' ' }} </td>
             {% endif %}
         </tr>
         {% endif %}
     
-        {% if Shipment.BK == True %}
+        {% if Shipment.BK == True and Shipment.Truck == False %}
         <tr>
             <td class=row0> {{ Shipment.number }} </td>
             <td class=row0> {{ Shipment.carrier }} </td>
@@ -199,6 +231,107 @@
             <td class=row0> {{ Shipment.po.cntr }} </td>
             <td class=row0> {{ Shipment.ETD }} </td>
             <td class=row0> {{ Shipment.ETA }} </td>       
+            
+            {% if Shipment.margin <= 0 %}
+            <td class=row5> {{ Shipment.margin }} </td>
+            {% endif %}
+    
+            {% if Shipment.margin > 0 %}
+            <td class=row4> {{ Shipment.margin }} </td>
+            {% endif %}
+            
+            {% if Shipment.numero <= 0 %}
+            <td class=row5> {{ Shipment.marginEUR }} </td>
+            {% endif %}
+    
+            {% if Shipment.numero > 0 %}
+            <td class=row4> {{ Shipment.marginEUR }} </td>
+            {% endif %}
+            
+            {% if Shipment.SI == True %}
+            <td class=row4> {{ ' ' }} </td>
+            {% endif %}
+            
+            {% if Shipment.SI == False %}
+            <td class=row5> {{ ' ' }} </td>
+            {% endif %}
+
+            {% if Shipment.Magic == True %}
+            <td class=row4> {{ ' ' }} </td>
+            {% endif %}
+            
+            {% if Shipment.Magic == False %}
+            <td class=row5> {{ ' ' }} </td>
+            {% endif %}
+    
+            {% if Shipment.Customs == True %}
+            <td class=row4> {{ ' ' }} </td>
+            {% endif %}
+            
+            {% if Shipment.Customs == False %}
+            <td class=row5> {{ ' ' }} </td>
+            {% endif %}
+        </tr>
+        {% endif %}
+        {% if Shipment.BK == False and Shipment.Truck == True %}
+        
+            <td class=row2t> {{ Shipment.number }} </td>
+            <td class=row2t> {{ Shipment.carrier }} </td>
+            <td class=row2t> {{ Shipment.bknumber }} </td>
+            <td class=row2t> {{ Shipment.po.Origin }} </td>
+            <td class=row2t> {{ Shipment.po.so.destination }} </td>
+            <td class=row2t> {{ Shipment.po.material }} </td>
+            <td class=row2t> {{ Shipment.po.cntr }} </td>
+            <td class=row2t> {{ Shipment.ETD }} </td>
+            <td class=row2t> {{ Shipment.ETA }} </td>
+            
+            
+            {% if Shipment.margin <= 0 %}
+            <td class=row5> {{ Shipment.margin }} </td>
+            {% endif %}
+    
+            {% if Shipment.margin > 0 %}
+            <td class=row4> {{ Shipment.margin }} </td>
+            {% endif %}
+            
+            {% if Shipment.numero <= 0 %}
+            <td class=row5> {{ Shipment.marginEUR }} </td>
+            {% endif %}
+    
+            {% if Shipment.numero > 0 %}
+            <td class=row4> {{ Shipment.marginEUR }} </td>
+            {% endif %}
+            
+            {% if Shipment.SI == True %}
+            <td class=row4> {{ ' ' }} </td>
+            {% endif %}
+            
+            {% if Shipment.SI == False %}
+            <td class=row5> {{ ' ' }} </td>
+            {% endif %}
+
+            {% if Shipment.Magic == True %}
+            <td class=row4> {{ ' ' }} </td>
+            {% endif %}
+            
+            {% if Shipment.Magic == False %}
+            <td class=row5> {{ ' ' }} </td>
+            {% endif %}
+    
+        </tr>
+        {% endif %}
+    
+        {% if Shipment.BK == True and Shipment.Truck == True %}
+        <tr>
+            <td class=row0t> {{ Shipment.number }} </td>
+            <td class=row0t> {{ Shipment.carrier }} </td>
+            <td class=row0t> {{ Shipment.bknumber }} </td>
+            <td class=row0t> {{ Shipment.po.Origin }} </td>
+            <td class=row0t> {{ Shipment.po.so.destination }} </td>
+            <td class=row0t> {{ Shipment.po.material }} </td>
+            <td class=row0t> {{ Shipment.po.cntr }} </td>
+            <td class=row0t> {{ Shipment.ETD }} </td>
+            <td class=row0t> {{ Shipment.ETA }} </td>       
             
             {% if Shipment.margin <= 0 %}
             <td class=row5> {{ Shipment.margin }} </td>
@@ -288,12 +421,14 @@
     </table>
 </div>
 <div class='manage'>
-    {% if request.user.username == 'admin' %}
+    {% if request.user.username == 'managerlatam' or request.user.username == 'managereurope' %}
     <div class="dropdown">
         <button class="dropbtn">Report</button>
         <div class="dropdown-content">
           <a href="{% url 'Report' %}">RDNS</a>
           <a href="{% url 'reportOrders' %}">PO-SO</a>
+          <a href="{% url 'reportClaims' %}">Claims</a>
+          <a href="{% url 'reportClaimsUA' %}">Claims UA</a>
         </div>
     </div>
         <a href = "{% url 'SalesViews'%}" class="link">SalesViews</a>
